--- a/themes/blowfish/layouts/partials/hero/big.html
+++ b/themes/blowfish/layouts/partials/hero/big.html
@@ -1,9 +1,9 @@
 {{ $disableImageOptimization := .Page.Site.Params.disableImageOptimization | default false }}
 
 {{- $images := .Resources.ByType "image" -}}
-{{- $featured := $images.GetMatch "**/background*" -}}
-{{- if not $featured }}{{ $featured = $images.GetMatch "**/feature*" }}{{ end -}}
-{{- if not $featured }}{{ $featured = $images.GetMatch "{**/cover*,**/thumbnail*}" }}{{ end -}}
+{{- $featured := $images.GetMatch "**/*background*" -}}
+{{- if not $featured }}{{ $featured = $images.GetMatch "**/*feature*" }}{{ end -}}
+{{- if not $featured }}{{ $featured = $images.GetMatch "**/*{cover,thumbnail,hero}*" }}{{ end -}}
 
 {{ if .Params.featureimage }}
 {{- $url:= .Params.featureimage -}}
