Mermaid support fix

--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -3,4 +3,22 @@
     <source type="audio/mpeg" src="{{ .Get "src" }}">
     <!-- Your browser does not support the audio element. -->
   </audio>
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+  <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+  <script>
+    (function() {
+      const players = Array.from(document.querySelectorAll('.player')).map(
+        p => new Plyr(p, {
+          controls: ['play', 'progress', 'current-time', 'mute', 'volume', 'fullscreen'],
+        })
+      );
+      players.forEach(function(p){
+        p.on('play', event => {
+          const instance = event.detail.plyr;
+          console.log('Stop others players');
+          players.forEach(function(p){ if(p != instance) p.stop()});
+        })
+      });
+    })();
+  </script>
 </div>
