Tweaking recent layout
Since this multiplexes essays and micro, we need to get creative to get everything to fit

--- a/themes/blowfish/assets/css/compiled/main.css
+++ b/themes/blowfish/assets/css/compiled/main.css
@@ -3789,8 +3789,11 @@ pre {
   text-align: left;
 }
 .thumbnail {
-  min-width: 300px;
-  height: 180px;
+  /*@markphilpot*/
+  /*min-width: 300px;*/
+  /*height: 180px;*/
+  min-width: 180px;
+  height: 120px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
