--- a/themes/blowfish/layouts/partials/article-link/simple.html
+++ b/themes/blowfish/layouts/partials/article-link/simple.html
@@ -31,7 +31,7 @@
 {{ with .Params.externalUrl }}
 <a class="{{ $articleClasses }}" href="{{ . }}" target="_blank" rel="external">
   {{ else }}
-  <a class="{{ $articleClasses }}" href="{{ .RelPermalink }}">
+  <a class="{{ $articleClasses }}prose max-w-prose" href="{{ .RelPermalink }}">
     {{ end }}
     {{- with $.Params.images -}}
     {{- range first 6 . }}
