--- a/themes/blowfish/layouts/partials/home/background.html
+++ b/themes/blowfish/layouts/partials/home/background.html
@@ -47,10 +47,10 @@
                         {{ end }}
                     {{ end }}
                     <h1 class="mb-2 text-4xl font-extrabold text-neutral-800 dark:text-neutral-200">
-                        {{ .Site.Params.Author.name | default .Site.Title }}
+                        {{ .Site.Params.Author.name }}
                     </h1>
                     {{ with .Site.Params.Author.headline }}
-                    <h2 class="mt-0 mb-0 text-xl text-neutral-800 dark:text-neutral-300">
+                    <h2 class="mt-0 mb-0 text-base text-neutral-800 dark:text-neutral-300">
                         {{ . | markdownify }}
                     </h2>
                     {{ end }}
